# while-you-are-at-it-server

./: DockerFile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 14b8969568e7_user_column_spec_changed.py  222986e15290_user_column_spec_changed.py  51943c87d6c8_initial_migration.py  6a47b4f58239_add_new_columns.py  9bd3189c3dba_initial_migration.py  e06793b18f1e_initial_migration.py  fc59053f4f1f_fix_foreign_keys_in_chat_and_user_models.py
app/: dependencies.py  main.py
app/api/v1/: api.py
app/api/v1/endpoints/: article.py  auth.py  chat.py  delivery.py  image.py  items.py  message.py  notification.py  order.py  review.py  service.py  service_category.py  store.py  user.py
app/core/: config.py  security.py  setting.py
app/db/: base.py  base_models.py  session.py  while_you_are_at_it.db
app/models/: __init__.py  address.py  article.py  chat.py  delivery.py  image.py  message.py  notification.py  order.py  review.py  service.py  service_category.py  store.py  token.py  user.py
app/schemas/: address.py  article.py  auth.py  chat.py  delivery.py  image.py  message.py  notification.py  order.py  review.py  service.py  service_category.py  store.py  user.py
app/services/: article_service.py  auth_service.py  chat_service.py  delivery_service.py  image_service.py  message_service.py  notification_service.py  order_service.py  review_service.py  service_category_service.py  service_service.py  store_service.py  user_service.py
config/: __init__.py  development.py  production.py
while/: pyvenv.cfg
